--- a/gleam.toml
+++ b/gleam.toml
@@ -13,6 +13,7 @@ links = [
 gleam_stdlib = ">= 0.44.0 and < 2.0.0"
 glexer = ">= 2.2.1 and < 3.0.0"
 gleam_community_ansi = ">= 1.4.3 and < 2.0.0"
+houdini = ">= 1.0.0 and < 2.0.0"
 
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
