--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,6 +36,8 @@ jobs:
           gleam run -m lustre/dev -- build app --minify
           # TODO: remove once Lustre dev tools have a way to build deploy ready code
           cat index.html | sed 's|priv/static/app.css|app.min.css|' | sed 's|priv/static/app.mjs|app.min.mjs|' > priv/static/index.html
+          ls -l priv
+          ls -l priv/static
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
